RESOLVED FIXED 148790
Web Inspector: Test RuntimeAgent.parse, detecting if a script parse error is recoverable
https://bugs.webkit.org/show_bug.cgi?id=148790
Summary Web Inspector: Test RuntimeAgent.parse, detecting if a script parse error is ...
Joseph Pecoraro
Reported 2015-09-04 01:14:20 PDT
* SUMMARY Test RuntimeAgent.parse, detecting if a script parse error is recoverable. Make unterminated literal detection more consistent for numeric literals.
Attachments
[PATCH] Proposed Fix (28.46 KB, patch)
2015-09-04 01:15 PDT, Joseph Pecoraro
no flags
[PATCH] Proposed Fix (29.87 KB, patch)
2015-09-04 11:26 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2015-09-04 01:14:39 PDT
Joseph Pecoraro
Comment 2 2015-09-04 01:15:30 PDT
Created attachment 260578 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 3 2015-09-04 01:18:00 PDT
Comment on attachment 260578 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=260578&action=review > LayoutTests/inspector/runtime/parse.html:73 > + testSource("`"); // template string > + testSource("`${1}"); // template string Perhaps template strings (and multi-line comments) should be treated as Recoverable. This would allow us to type multi-line comments and template strings in the console (and jsc) more easily. Thoughts?
Timothy Hatcher
Comment 4 2015-09-04 07:50:48 PDT
(In reply to comment #3) > Comment on attachment 260578 [details] > [PATCH] Proposed Fix > > View in context: > https://bugs.webkit.org/attachment.cgi?id=260578&action=review > > > LayoutTests/inspector/runtime/parse.html:73 > > + testSource("`"); // template string > > + testSource("`${1}"); // template string > > Perhaps template strings (and multi-line comments) should be treated as > Recoverable. This would allow us to type multi-line comments and template > strings in the console (and jsc) more easily. Thoughts? I think it would make sense to allow multi-line in these cases.
Joseph Pecoraro
Comment 5 2015-09-04 11:26:37 PDT
Created attachment 260603 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 6 2015-09-04 11:26:53 PDT
> > Perhaps template strings (and multi-line comments) should be treated as > > Recoverable. This would allow us to type multi-line comments and template > > strings in the console (and jsc) more easily. Thoughts? > > I think it would make sense to allow multi-line in these cases. Done!
WebKit Commit Bot
Comment 7 2015-09-04 12:49:01 PDT
Comment on attachment 260603 [details] [PATCH] Proposed Fix Clearing flags on attachment: 260603 Committed r189371: <http://trac.webkit.org/changeset/189371>
WebKit Commit Bot
Comment 8 2015-09-04 12:49:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.