Web Inspector: Test RuntimeAgent.parse, detecting if a script parse error is recoverable https://bugs.webkit.org/show_bug.cgi?id=148790

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-09-04
Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

* parser/Lexer.cpp:
(JSC::Lexer<T>::lex):
* parser/Parser.cpp:
(JSC::Parser<LexerType>::printUnexpectedTokenText):
* parser/ParserTokens.h:
More consistently name and treat unterminated numeric literals.

* parser/Parser.h:
(JSC::Parser<LexerType>::parse):
Treat multiline capable unterminated literals as recoverable.

LayoutTests:

* inspector/runtime/parse-expected.txt: Added.
* inspector/runtime/parse.html: Added.

Canonical link: https://commits.webkit.org/166925@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189371 268f45cc-cd09-0410-ab3c-d52691b4dbfc